@@ -1,10 +1,12 @@
 local constants = {}
 
+constants.description_color = { r = 0.8, g = 0.8, b = 0.8 }
+
 constants.task_status = {
   not_started = { color = "black", label = { "gui.tlst-status-not-started" } },
-  in_progress_critical = { color = "red", label = { "gui.tlst-status-in-progress-critical" } },
+  in_progress = { color = "green", label = { "gui.tlst-status-in-progress" } },
   in_progress_high = { color = "yellow", label = { "gui.tlst-status-in-progress-high" } },
-  in_progress_low = { color = "green", label = { "gui.tlst-status-in-progress-low" } },
+  in_progress_critical = { color = "red", label = { "gui.tlst-status-in-progress-critical" } },
   paused = { color = "white", label = { "gui.tlst-status-paused" } },
 }
 local i = 0
