@@ -17,7 +17,7 @@ tlst-private-switch-description=Tasks visible only to you
 tlst-show-completed=Show completed
 tlst-status-in-progress-critical=In progress (critical priority)
 tlst-status-in-progress-high=In progress (high priority)
-tlst-status-in-progress-low=In progress (low priority)
+tlst-status-in-progress=In progress
 tlst-status-not-started=Not started
 tlst-status-paused=Paused
 tlst-status=Status
