@@ -4,6 +4,8 @@ Date: ????
   Features:
     - Added task status, which can be one of `not started`, `in progress (high priority)`, `in progress (low priority)` and `paused`
       - Status can be adjusted in the edit task dialog, or by clicking the status icon in the tasks GUI
+  Changes:
+    - Description are a lot less disruptive now
   Bugfixes:
     - Fixed edit task GUI when the parent task has a very long name
 ---------------------------------------------------------------------------------------------------
